Actually we have a more modern java available